# droniada-detect

./: README.md  pyproject.toml
droniada_detect/: __init__.py  detector.py
